examples/errors/catdynpred.lgt
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
%  
%  This file is part of Logtalk <http://logtalk.org/>    
%  
%  Logtalk is free software. You can redistribute it and/or modify it under
%  the terms of the FSF GNU General Public License 3  (plus some additional
%  terms per section 7).        Consult the "LICENSE.txt" file for details.
%
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%


:- category(catdynpred).

	% dynamic predicates may be declared inside categories but ...
	:- public(dynpred/1).
	:- dynamic(dynpred/1).

	% ... clauses for dynamic predicates are not allowed
	dynpred(1).
	dynpred(2).
	dynpred(3).

:- end_object.
